fix hero text top position on tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1394,7 +1394,7 @@ section.last {
 	.hero .text {
 		align-items: flex-start;
 		position: absolute;
-		top: 130px;	
+		top: 170px;
 	}
 	.hero .text .inner {
 		width: 38%;
